real-time classification working

--- a/Integrate & classify.ipynb
+++ b/Integrate & classify.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-08-01T11:46:01.664748Z",
+     "start_time": "2025-08-01T11:45:57.270736Z"
+    }
    },
    "source": [
     "import numpy as np\n",
@@ -19,13 +23,13 @@
     "from datetime import datetime"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-31T16:11:00.674469Z",
-     "start_time": "2025-07-31T16:11:00.670082Z"
+     "end_time": "2025-08-01T11:46:01.678187Z",
+     "start_time": "2025-08-01T11:46:01.673920Z"
     }
    },
    "cell_type": "code",
@@ -69,13 +73,13 @@
    ],
    "id": "50e9f394b5478977",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-31T16:11:00.817022Z",
-     "start_time": "2025-07-31T16:11:00.702946Z"
+     "end_time": "2025-08-01T11:46:01.830350Z",
+     "start_time": "2025-08-01T11:46:01.721613Z"
     }
    },
    "cell_type": "code",
@@ -86,13 +90,13 @@
    ],
    "id": "c8f80472c1cedf0b",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-31T16:11:10.864592Z",
-     "start_time": "2025-07-31T16:11:10.828508Z"
+     "end_time": "2025-08-01T11:46:01.875347Z",
+     "start_time": "2025-08-01T11:46:01.846271Z"
     }
    },
    "cell_type": "code",
@@ -160,8 +164,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-31T16:29:05.842147Z",
-     "start_time": "2025-07-31T16:28:56.877122Z"
+     "end_time": "2025-08-01T11:47:01.413833Z",
+     "start_time": "2025-08-01T11:46:57.084576Z"
     }
    },
    "cell_type": "code",
@@ -171,8 +175,9 @@
     "k = 50\n",
     "w_teacher = 1.\n",
     "n_pot = 10\n",
-    "uniformW = True\n",
+    "uniformW = False\n",
     "train_epoch = 20\n",
+    "n_dense = I_train.shape[1]\n",
     "\n",
     "if uniformW:\n",
     "    W_hd = np.random.uniform(high=1/np.sqrt(n_dense), size=(n_hd, n_dense))  #Test random sparse weights\n",
@@ -185,7 +190,7 @@
     "for epoch in range(train_epoch):\n",
     "    x_dense = I_train\n",
     "    labels = np.concatenate((Y_train, Y_test))\n",
-    "    n_dense = x_dense.shape[1]\n",
+    "\n",
     "    x_hd = x_dense @ W_hd.T\n",
     "    z_hd = np.where(np.argsort(x_hd)<k, 1., 0)\n",
     "\n",
@@ -231,75 +236,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0\tTrain accuracy: 0.3333\tTest accuracy: 0.3333\n",
-      "Epoch: 1\tTrain accuracy: 0.3600\tTest accuracy: 0.3333\n",
-      "Epoch: 2\tTrain accuracy: 0.4578\tTest accuracy: 0.3333\n",
-      "Epoch: 3\tTrain accuracy: 0.6356\tTest accuracy: 0.3467\n",
-      "Epoch: 4\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 5\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 6\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 7\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 8\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 9\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 10\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 11\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 12\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 13\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 14\tTrain accuracy: 0.6667\tTest accuracy: 0.3733\n",
-      "Epoch: 15\tTrain accuracy: 0.6667\tTest accuracy: 0.3600\n",
-      "Epoch: 16\tTrain accuracy: 0.6667\tTest accuracy: 0.3467\n",
-      "Epoch: 17\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n",
-      "Epoch: 18\tTrain accuracy: 0.6667\tTest accuracy: 0.3200\n",
-      "Epoch: 19\tTrain accuracy: 0.6667\tTest accuracy: 0.3333\n"
+      "Epoch: 0\tTrain accuracy: 0.3822\tTest accuracy: 0.3600\n",
+      "Epoch: 1\tTrain accuracy: 0.5067\tTest accuracy: 0.4533\n",
+      "Epoch: 2\tTrain accuracy: 0.5778\tTest accuracy: 0.4533\n",
+      "Epoch: 3\tTrain accuracy: 0.6400\tTest accuracy: 0.4800\n",
+      "Epoch: 4\tTrain accuracy: 0.6356\tTest accuracy: 0.4533\n",
+      "Epoch: 5\tTrain accuracy: 0.6444\tTest accuracy: 0.4400\n",
+      "Epoch: 6\tTrain accuracy: 0.6622\tTest accuracy: 0.4267\n",
+      "Epoch: 7\tTrain accuracy: 0.6533\tTest accuracy: 0.4267\n",
+      "Epoch: 8\tTrain accuracy: 0.6533\tTest accuracy: 0.4267\n",
+      "Epoch: 9\tTrain accuracy: 0.6533\tTest accuracy: 0.4267\n",
+      "Epoch: 10\tTrain accuracy: 0.6533\tTest accuracy: 0.4267\n",
+      "Epoch: 11\tTrain accuracy: 0.6222\tTest accuracy: 0.4000\n",
+      "Epoch: 12\tTrain accuracy: 0.5600\tTest accuracy: 0.3867\n",
+      "Epoch: 13\tTrain accuracy: 0.4711\tTest accuracy: 0.4000\n",
+      "Epoch: 14\tTrain accuracy: 0.4311\tTest accuracy: 0.3733\n",
+      "Epoch: 15\tTrain accuracy: 0.4089\tTest accuracy: 0.3867\n",
+      "Epoch: 16\tTrain accuracy: 0.3778\tTest accuracy: 0.3600\n",
+      "Epoch: 17\tTrain accuracy: 0.3689\tTest accuracy: 0.3600\n",
+      "Epoch: 18\tTrain accuracy: 0.3689\tTest accuracy: 0.3867\n",
+      "Epoch: 19\tTrain accuracy: 0.3556\tTest accuracy: 0.3467\n"
      ]
     }
    ],
-   "execution_count": 28
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-31T16:18:09.700086Z",
-     "start_time": "2025-07-31T16:18:09.693517Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "np.concatenate((Y_test, Y_train))",
-   "id": "8a3eed60405dc0dc",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, 2, 1, 2, 1, 2, 1, 1, 2, 1, 1, 2, 1, 0, 0, 2, 0, 1, 1, 0,\n",
-       "       1, 2, 0, 1, 0, 2, 1, 1, 0, 2, 1, 0, 2, 2, 2, 1, 0, 1, 2, 0, 1, 1,\n",
-       "       0, 0, 0, 2, 0, 0, 2, 1, 1, 1, 1, 0, 0, 2, 1, 2, 1, 0, 2, 0, 2, 0,\n",
-       "       0, 1, 2, 0, 0, 0, 2, 2, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 2, 0, 0,\n",
-       "       0, 2, 0, 2, 1, 0, 2, 1, 2, 1, 2, 0, 1, 1, 1, 2, 0, 2, 0, 2, 1, 2,\n",
-       "       0, 2, 2, 0, 2, 0, 2, 2, 0, 0, 1, 1, 0, 0, 0, 2, 2, 1, 2, 1, 0, 2,\n",
-       "       2, 0, 0, 0, 0, 2, 1, 2, 2, 2, 2, 2, 1, 0, 2, 1, 2, 2, 1, 0, 2, 1,\n",
-       "       1, 1, 1, 0, 1, 1, 0, 1, 1, 2, 1, 2, 0, 0, 1, 1, 1, 2, 1, 2, 0, 2,\n",
-       "       0, 1, 0, 1, 2, 0, 2, 2, 1, 1, 0, 1, 2, 0, 2, 0, 1, 0, 2, 1, 2, 1,\n",
-       "       2, 0, 2, 2, 1, 1, 0, 2, 2, 2, 0, 0, 0, 0, 0, 2, 2, 0, 2, 1, 1, 1,\n",
-       "       2, 1, 0, 1, 1, 0, 1, 1, 2, 0, 0, 1, 1, 0, 2, 0, 2, 2, 2, 1, 0, 1,\n",
-       "       0, 2, 2, 1, 1, 2, 2, 2, 0, 2, 2, 0, 2, 0, 2, 1, 1, 2, 0, 1, 0, 1,\n",
-       "       1, 2, 2, 0, 0, 0, 1, 2, 0, 2, 1, 1, 1, 2, 0, 1, 0, 2, 1, 1, 1, 2,\n",
-       "       1, 2, 0, 0, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 12
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "ad0b0028ac2427cc"
+   "execution_count": 7
   }
  ],
  "metadata": {
