--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-21T09:40:21.395408Z",
-     "start_time": "2025-07-21T09:40:19.154752Z"
+     "end_time": "2025-09-01T09:57:28.864089Z",
+     "start_time": "2025-09-01T09:57:27.776891Z"
     }
    },
    "source": [
@@ -20,13 +20,13 @@
     "from maya import SerialCommunication, PCF8575Control_, MFCControl"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T09:40:21.427223Z",
-     "start_time": "2025-07-21T09:40:21.423544Z"
+     "end_time": "2025-09-01T09:57:29.689543Z",
+     "start_time": "2025-09-01T09:57:29.687059Z"
     }
    },
    "cell_type": "code",
@@ -38,15 +38,13 @@
    ],
    "id": "2767a8d13248cbd5",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-07-21T11:53:04.777527Z"
+     "end_time": "2025-09-01T10:39:13.208237Z",
+     "start_time": "2025-09-01T10:28:12.837008Z"
     }
    },
    "cell_type": "code",
@@ -98,11 +96,10 @@
     "    MFC_control.set_flow(i, 0.)\n",
     "\n",
     "# Recording\n",
-    "t_baseline = 300\n",
+    "t_baseline = 60\n",
     "t_sample = 20\n",
-    "n_sequence = 300\n",
-    "filename = \"data/2_300_20.csv\"\n",
-    "addr_air = 1\n",
+    "n_sequence = 30\n",
+    "filename = f\"data/1_{n_sequence}_20.csv\"\n",
     "\n",
     "sequence = generate_sequence(int(n_sequence/3))\n",
     "data = []\n",
@@ -111,11 +108,8 @@
     "    os.remove(filename)\n",
     "\n",
     "# Flushing sensors & setting baseline\n",
-    "MFC_control.set_flow(addr_air, 1.)\n",
     "for read in serial_comm.stream_data(t_baseline, save_csv=True, filename=filename):\n",
-    "    # data.append(read)\n",
     "    pass\n",
-    "MFC_control.set_flow(addr_air, 0.)\n",
     "\n",
     "# Random sequence\n",
     "for i in range(len(sequence)):\n",
@@ -157,21 +151,291 @@
       "MFC 1 flow rate updated: 0.0\n",
       "Sent to Teensy: MFC,2,1,0\n",
       "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Created and started writing to data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
       "Sent to Teensy: MFC,1,1,32000\n",
       "MFC 1 flow rate updated: 1.0\n",
       "Sent to Teensy: MAYA,1\n",
-      "Created and started writing to data/2_300_20.csv.\n",
-      "Streaming data...\n"
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,2,1,32000\n",
+      "MFC 2 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,2,1,0\n",
+      "MFC 2 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,1,1,32000\n",
+      "MFC 1 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,1,1,0\n",
+      "MFC 1 flow rate updated: 0.0\n",
+      "Sent to Teensy: MFC,3,1,32000\n",
+      "MFC 3 flow rate updated: 1.0\n",
+      "Sent to Teensy: MAYA,1\n",
+      "Appending data to existing file data/1_30_20.csv.\n",
+      "Streaming data...\n",
+      "Sent to Teensy: MAYA,0\n",
+      "Done\n",
+      "Sent to Teensy: MFC,3,1,0\n",
+      "MFC 3 flow rate updated: 0.0\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T11:52:13.281749Z",
-     "start_time": "2025-07-21T11:52:13.274060Z"
+     "end_time": "2025-09-01T10:01:41.412031Z",
+     "start_time": "2025-09-01T10:01:41.405281Z"
     }
    },
    "cell_type": "code",
@@ -183,33 +447,23 @@
    ],
    "id": "93b7b1ee4f76b2ff",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T09:46:12.735415Z",
-     "start_time": "2025-07-21T09:46:12.727784Z"
+     "end_time": "2025-09-01T09:43:49.867730Z",
+     "start_time": "2025-09-01T09:43:49.863200Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "b229b67a457c117e",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sent to Teensy: MFC,0,1,0\n",
-      "MFC 0 flow rate updated: 0.0\n",
-      "Sent to Teensy: MFC,1,1,0\n",
-      "MFC 1 flow rate updated: 0.0\n",
-      "Sent to Teensy: MFC,2,1,0\n",
-      "MFC 2 flow rate updated: 0.0\n"
-     ]
-    }
+   "source": [
+    "with open (f'data/1_600_20.csv_sequence.pkl', 'rb') as f:\n",
+    "    times_seq = pickle.load(f)"
    ],
-   "execution_count": 9
+   "id": "b229b67a457c117e",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
