signal plots and circuit svg

--- a/Classification with stochastic switching.ipynb
+++ b/Classification with stochastic switching.ipynb
@@ -1,30 +1,35 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T19:46:13.703980Z",
+     "start_time": "2025-09-29T19:46:03.709811Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
-    "import pickle\n",
-    "import csv\n",
-    "import torch\n",
-    "from torch.linalg import inv, eig, pinv\n",
     "from matplotlib import pyplot as plt\n",
-    "from tools import whiten, adap_whitening, adap_whitening_2\n",
+    "from matplotlib import font_manager as fm, rcParams\n",
+    "from matplotlib.colors import ListedColormap\n",
     "from sklearn import svm, metrics\n",
-    "from sklearn.decomposition import PCA\n",
-    "from datetime import datetime\n",
     "import sklearn\n",
     "import pickle\n",
     "from scipy.ndimage import gaussian_filter1d\n",
-    "from tools import load, split, estimate_derivative, plot_two_intervals"
+    "from tools import load, split, estimate_derivative"
    ],
    "id": "48da481a0c845ea6",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T19:46:13.715846Z",
+     "start_time": "2025-09-29T19:46:13.712357Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def find_blocks(labels, max_len=20, ignore=0):\n",
@@ -62,15 +67,17 @@
    ],
    "id": "5f9e0048a8679846",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T19:46:13.722133Z",
+     "start_time": "2025-09-29T19:46:13.719003Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "from matplotlib import font_manager as fm, rcParams\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "\n",
     "# path = r\"/home/p308270/.local/share/fonts/Helvetica.ttf\"  # or .otf\n",
     "# fm.fontManager.addfont(path)\n",
     "rcParams[\"font.family\"] = \"Helvetica\"\n",
@@ -81,10 +88,15 @@
    ],
    "id": "654d587ec1868cf9",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-29T19:46:43.828526Z",
+     "start_time": "2025-09-29T19:46:43.536042Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "n_hd = 10000\n",
@@ -108,7 +120,7 @@
    ],
    "id": "b1fdf2215ecaa6c",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "metadata": {},
