--- a/Few shot learning.ipynb
+++ b/Few shot learning.ipynb
@@ -2,9 +2,8 @@
  "cells": [
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:14.388019Z",
-     "start_time": "2025-09-29T13:35:57.257789Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -19,12 +18,12 @@
    ],
    "id": "a8fb8960f5847a75",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:14.407233Z",
+     "end_time": "2025-09-30T14:20:49.073838650Z",
      "start_time": "2025-09-29T13:36:14.397895Z"
     }
    },
@@ -49,7 +48,7 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:14.478086Z",
+     "end_time": "2025-09-30T14:20:49.166075750Z",
      "start_time": "2025-09-29T13:36:14.457311Z"
     }
    },
@@ -163,7 +162,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:31.886940Z",
+     "end_time": "2025-09-30T14:20:49.253273744Z",
      "start_time": "2025-09-29T13:36:31.298060Z"
     }
    },
@@ -217,7 +216,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:33.769543Z",
+     "end_time": "2025-09-30T14:20:49.362610610Z",
      "start_time": "2025-09-29T13:36:33.294153Z"
     }
    },
@@ -244,7 +243,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:36:34.627637Z",
+     "end_time": "2025-09-30T14:20:49.398493739Z",
      "start_time": "2025-09-29T13:36:34.134332Z"
     }
    },
@@ -373,7 +372,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:40:18.065995Z",
+     "end_time": "2025-09-30T14:20:49.534825993Z",
      "start_time": "2025-09-29T13:40:16.719149Z"
     }
    },
@@ -487,7 +486,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:41:34.718509Z",
+     "end_time": "2025-09-30T14:20:49.555904035Z",
      "start_time": "2025-09-29T13:41:32.942036Z"
     }
    },
@@ -612,7 +611,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:41:41.306414Z",
+     "end_time": "2025-09-30T14:20:49.561215219Z",
      "start_time": "2025-09-29T13:41:40.174707Z"
     }
    },
@@ -747,7 +746,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:41:48.809191Z",
+     "end_time": "2025-09-30T14:20:49.614088482Z",
      "start_time": "2025-09-29T13:41:42.259560Z"
     }
    },
@@ -937,7 +936,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T13:41:53.587734Z",
+     "end_time": "2025-09-30T14:20:49.619408636Z",
      "start_time": "2025-09-29T13:41:51.800774Z"
     }
    },
@@ -1168,7 +1167,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-26T16:10:27.495350Z",
+     "end_time": "2025-09-30T14:20:49.623869533Z",
      "start_time": "2025-09-26T16:10:27.493238Z"
     }
    },
